--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "author": "",
   "license": "ISC",
@@ -14,5 +15,8 @@
     "path": "^0.12.7",
     "request": "^2.88.0",
     "require": "^2.4.20"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
